test/valid/41625_maybe/TestFromMaybe.plume
/**
* Test fromMaybe function of MaybeInteger
* @author fc41625@alunos.fc.ul.pt Fabio Botelho 
* @version $id$ 
*/


class TestFromMaybe extends Object is  
	method main : () -> String is 
		((new JustInteger(10) as MaybeInteger).fromMaybe(1)   + (new Nothing() as MaybeInteger).fromMaybe(2)).toString()  
	//expect : 12